Big work for authorization
