# src/services/users/models/user.ts
@@ -1,4 +1,20 @@
-import { Entity, PrimaryGeneratedColumn, Column, BaseEntity } from "typeorm";
+import {
+  Entity,
+  PrimaryGeneratedColumn,
+  Column,
+  BaseEntity,
+  BeforeInsert,
+  getRepository
+} from "typeorm";
+import bcrypt from "bcrypt";
+import uuid from "uuid/v1";
+
+export type UserRO = {
+  id: number;
+  email: string;
+  username: string;
+  password?: string;
+};
 
 @Entity()
 export class User extends BaseEntity {
@@ -8,18 +24,49 @@ export class User extends BaseEntity {
   @Column({ length: 50, unique: true })
   username: string;
 
-  // @Column({ length: 100, nullable: true })
-  // password: string | null = null;
-
-  // @Column({ length: 100, nullable: true })
-  // passwordHash: string | null = null;
+  @Column({ length: 100, nullable: true, select: false })
+  password: string = "";
 
   @Column({ length: 500 })
   email: string;
 
-  constructor(username: string, email: string) {
+  @Column({ length: 100, default: null, nullable: true })
+  confirmUid?: string;
+
+  @Column({ type: "boolean", default: false })
+  isConfirmed: boolean = false;
+
+  constructor(username: string, email: string, password: string) {
     super();
     this.username = username;
     this.email = email;
+    this.password = password;
+  }
+
+  @BeforeInsert()
+  generatConfirm() {
+    this.confirmUid = uuid();
+  }
+
+  @BeforeInsert()
+  async hashPassword() {
+    this.password = await bcrypt.hash(this.password, 10);
+  }
+
+  async comparePassword(attempt: string) {
+    return await bcrypt.compare(attempt, this.password);
+  }
+
+  toResponseObject(): UserRO {
+    const { id, email, username } = this;
+    const responseObject: UserRO = {
+      id,
+      username,
+      email
+    };
+
+    return responseObject;
   }
 }
+
+export const getUsersRepository = () => getRepository(User);
